// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Engagements/Certificates Awarded should award a certificate on user registration 1`] = `
"<div class=\\"llms-certificate-wrapper\\">
	<div id=\\"certificate-999\\" class=\\"llms-certificate-container cert-template-v2 post-999 llms_my_certificate type-llms_my_certificate status-publish hentry\\">

		
		
		
<h1 class=\\"has-text-align-center has-default-font-family\\">Awarded on Registration</h1>



<p class=\\"has-text-align-center\\">Awarded to Maude Lebowski</p>



<p class=\\"has-text-align-center\\">On Octember 01, 9999</p>

		
	</div>
</div>"
`;

exports[`Engagements/Certificates Awarded should award a certificate on user registration 2`] = `
"<div class=\\"llms-certificate-wrapper\\">
	<div id=\\"certificate-999\\" class=\\"llms-certificate-container cert-template-v2 post-999 llms_my_certificate type-llms_my_certificate status-publish hentry\\">

		
		
		
<h1 class=\\"has-text-align-center has-default-font-family\\">Awarded on Registration</h1>



<p class=\\"has-text-align-center\\">Awarded to Maude Lebowski</p>



<p class=\\"has-text-align-center\\">On Octember 01, 9999</p>

		
	</div>
</div>"
`;

exports[`Engagements/Certificates Templates can reset blocks to the default template 1`] = `
Array [
  Object {
    "attributes": Object {
      "content": "",
      "fontFamily": "default",
      "level": 1,
      "placeholder": "Certificate of Achievement",
      "style": Object {
        "spacing": Object {
          "margin": Object {
            "bottom": "0px",
            "top": "40px",
          },
        },
        "typography": Object {
          "fontSize": "90px",
          "lineHeight": "1.1",
        },
      },
      "textAlign": "center",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "llms/certificate-title",
  },
  Object {
    "attributes": Object {
      "height": 100,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "core/spacer",
  },
  Object {
    "attributes": Object {
      "content": "Presented to",
      "level": 3,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "style": Object {
        "spacing": Object {
          "margin": Object {
            "bottom": "0px",
            "top": "0px",
          },
        },
        "typography": Object {
          "fontSize": "32px",
          "lineHeight": "1.3",
        },
      },
      "textAlign": "center",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "core/heading",
  },
  Object {
    "attributes": Object {
      "content": "[llms-user display_name]",
      "level": 2,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "style": Object {
        "spacing": Object {
          "margin": Object {
            "bottom": "0px",
            "top": "0px",
          },
        },
        "typography": Object {
          "fontSize": "48px",
          "lineHeight": "1.3",
        },
      },
      "textAlign": "center",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "core/heading",
  },
  Object {
    "attributes": Object {
      "content": "for demonstration of excellence",
      "level": 3,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "style": Object {
        "spacing": Object {
          "margin": Object {
            "bottom": "0px",
            "top": "0px",
          },
        },
        "typography": Object {
          "fontSize": "32px",
          "lineHeight": "1.3",
        },
      },
      "textAlign": "center",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "core/heading",
  },
  Object {
    "attributes": Object {
      "height": 100,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "core/spacer",
  },
  Object {
    "attributes": Object {
      "isStackedOnMobile": false,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "align": "center",
              "content": "{current_date}",
              "dropCap": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "style": Object {
                "typography": Object {
                  "fontSize": "18px",
                  "lineHeight": "1.6",
                },
              },
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/paragraph",
          },
          Object {
            "attributes": Object {
              "align": "center",
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/separator",
          },
          Object {
            "attributes": Object {
              "align": "center",
              "content": "DATE",
              "dropCap": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "style": Object {
                "typography": Object {
                  "fontSize": "18px",
                  "lineHeight": "1.6",
                },
              },
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/paragraph",
          },
        ],
        "isValid": true,
        "name": "core/column",
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
        },
        "innerBlocks": Array [],
        "isValid": true,
        "name": "core/column",
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "align": "center",
              "content": "{site_title}",
              "dropCap": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "style": Object {
                "typography": Object {
                  "fontSize": "18px",
                  "lineHeight": "1.6",
                },
              },
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/paragraph",
          },
          Object {
            "attributes": Object {
              "align": "center",
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/separator",
          },
          Object {
            "attributes": Object {
              "align": "center",
              "content": "SIGNED",
              "dropCap": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "style": Object {
                "typography": Object {
                  "fontSize": "18px",
                  "lineHeight": "1.6",
                },
              },
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/paragraph",
          },
        ],
        "isValid": true,
        "name": "core/column",
      },
    ],
    "isValid": true,
    "name": "core/columns",
  },
]
`;

exports[`Engagements/Certificates Templates can reset blocks to the default template when there are no blocks present 1`] = `
Array [
  Object {
    "attributes": Object {
      "content": "",
      "fontFamily": "default",
      "level": 1,
      "placeholder": "Certificate of Achievement",
      "style": Object {
        "spacing": Object {
          "margin": Object {
            "bottom": "0px",
            "top": "40px",
          },
        },
        "typography": Object {
          "fontSize": "90px",
          "lineHeight": "1.1",
        },
      },
      "textAlign": "center",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "llms/certificate-title",
  },
  Object {
    "attributes": Object {
      "height": 100,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "core/spacer",
  },
  Object {
    "attributes": Object {
      "content": "Presented to",
      "level": 3,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "style": Object {
        "spacing": Object {
          "margin": Object {
            "bottom": "0px",
            "top": "0px",
          },
        },
        "typography": Object {
          "fontSize": "32px",
          "lineHeight": "1.3",
        },
      },
      "textAlign": "center",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "core/heading",
  },
  Object {
    "attributes": Object {
      "content": "[llms-user display_name]",
      "level": 2,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "style": Object {
        "spacing": Object {
          "margin": Object {
            "bottom": "0px",
            "top": "0px",
          },
        },
        "typography": Object {
          "fontSize": "48px",
          "lineHeight": "1.3",
        },
      },
      "textAlign": "center",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "core/heading",
  },
  Object {
    "attributes": Object {
      "content": "for demonstration of excellence",
      "level": 3,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
      "style": Object {
        "spacing": Object {
          "margin": Object {
            "bottom": "0px",
            "top": "0px",
          },
        },
        "typography": Object {
          "fontSize": "32px",
          "lineHeight": "1.3",
        },
      },
      "textAlign": "center",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "core/heading",
  },
  Object {
    "attributes": Object {
      "height": 100,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [],
    "isValid": true,
    "name": "core/spacer",
  },
  Object {
    "attributes": Object {
      "isStackedOnMobile": false,
      "llms_visibility": "all",
      "llms_visibility_in": "",
      "llms_visibility_posts": "[]",
    },
    "innerBlocks": Array [
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "align": "center",
              "content": "{current_date}",
              "dropCap": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "style": Object {
                "typography": Object {
                  "fontSize": "18px",
                  "lineHeight": "1.6",
                },
              },
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/paragraph",
          },
          Object {
            "attributes": Object {
              "align": "center",
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/separator",
          },
          Object {
            "attributes": Object {
              "align": "center",
              "content": "DATE",
              "dropCap": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "style": Object {
                "typography": Object {
                  "fontSize": "18px",
                  "lineHeight": "1.6",
                },
              },
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/paragraph",
          },
        ],
        "isValid": true,
        "name": "core/column",
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
        },
        "innerBlocks": Array [],
        "isValid": true,
        "name": "core/column",
      },
      Object {
        "attributes": Object {
          "llms_visibility": "all",
          "llms_visibility_in": "",
          "llms_visibility_posts": "[]",
        },
        "innerBlocks": Array [
          Object {
            "attributes": Object {
              "align": "center",
              "content": "{site_title}",
              "dropCap": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "style": Object {
                "typography": Object {
                  "fontSize": "18px",
                  "lineHeight": "1.6",
                },
              },
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/paragraph",
          },
          Object {
            "attributes": Object {
              "align": "center",
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/separator",
          },
          Object {
            "attributes": Object {
              "align": "center",
              "content": "SIGNED",
              "dropCap": false,
              "llms_visibility": "all",
              "llms_visibility_in": "",
              "llms_visibility_posts": "[]",
              "style": Object {
                "typography": Object {
                  "fontSize": "18px",
                  "lineHeight": "1.6",
                },
              },
            },
            "innerBlocks": Array [],
            "isValid": true,
            "name": "core/paragraph",
          },
        ],
        "isValid": true,
        "name": "core/column",
      },
    ],
    "isValid": true,
    "name": "core/columns",
  },
]
`;

exports[`Engagements/Certificates Templates should create a certificate in the block editor 1`] = `
"<div class=\\"llms-certificate-wrapper\\">
	<div id=\\"certificate-999\\" class=\\"llms-certificate-container cert-template-v2 post-999 llms_certificate type-llms_certificate status-publish hentry\\">

		
		
		
<h1 class=\\"has-text-align-center has-default-font-family\\">A Certificate!</h1>



<p class=\\"has-text-align-center\\">Awarded to Chad Feldheimer</p>



<p class=\\"has-text-align-center\\">On Octember 01, 9999</p>

		
	</div>
</div>"
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Margins 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "5.5mm 10mm",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "10mm",
  "padding-bottom": "7%",
  "padding-left": "10%",
  "padding-right": "3%",
  "padding-top": "2.5%",
  "width": "5.5mm",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: A3 (Landscape) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "420mm 297mm",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "297mm",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "420mm",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: A3 (Portrait) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "297mm 420mm",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "420mm",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "297mm",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: A4 (Landscape) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "297mm 210mm",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "210mm",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "297mm",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: A4 (Portrait) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "210mm 297mm",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "297mm",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "210mm",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: A5 (Landscape) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "210mm 148mm",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "148mm",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "210mm",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: A5 (Portrait) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "148mm 210mm",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "210mm",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "148mm",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: CUSTOM (Landscape) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "10mm 5.5mm",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "5.5mm",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "10mm",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: CUSTOM (Portrait) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "5.5mm 10mm",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "10mm",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "5.5mm",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: Ledger (Landscape) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "17in 11in",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "11in",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "17in",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: Ledger (Portrait) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "11in 17in",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "17in",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "11in",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: Legal (Landscape) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "14in 8.5in",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "8.5in",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "14in",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: Legal (Portrait) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "8.5in 14in",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "14in",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "8.5in",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: Letter (Landscape) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "11in 8.5in",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "8.5in",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "11in",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: Letter (Portrait) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "8.5in 11in",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "11in",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "8.5in",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: User defined (Landscape) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "400mm 400mm",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "400mm",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "400mm",
}
`;

exports[`Engagements/Certificates Templates should update the DOM when certificate settings change: Size: User defined (Portrait) 1`] = `
Object {
  "background-image": Any<String>,
  "background-repeat-x": "no-repeat",
  "background-repeat-y": "no-repeat",
  "background-size": "400mm 400mm",
  "box-sizing": "border-box",
  "margin-left": "auto",
  "margin-right": "auto",
  "min-height": "400mm",
  "padding-bottom": "5%",
  "padding-left": "5%",
  "padding-right": "5%",
  "padding-top": "5%",
  "width": "400mm",
}
`;
